# maple

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  TODO  chapter_1.html  chapter_2.html  chapter_4.html  cursors_oh_my.html  index.html  print.html  searchindex.js  searchindex.json
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_4.md  cursor_oh_my.md  cursors_oh_my.md
examples/: cursor_image.rs  cursor_type.rs  fullscreen.rs  resizable.rs  transparent.rs  window.rs  window_icon.rs
src/: lib.rs
