[package]
name = "maple"
version = "0.1.0"
description = "Rust GUI Library Built on top of winit"
authors = ["Interfiber"]
edition = "2018"
license = "MIT"
homepage = "https://interfiber.github.io/maple"
readme = "README.md"
repository = "https://github.com/Interfiber/maple"
[dependencies]
winit = "0.24.0"